--- a/public_html/views/play.ejs
+++ b/public_html/views/play.ejs
@@ -113,10 +113,14 @@ Number.prototype.zf = function (len) { return this.toString().zf(len); };
                                    <a class="btn btn-primary" href="/board/play/write" role="button">글쓰기</a>
                               </div>
                               <div class="play-search">
-                                   <form class="board-search" name="board-search" action="/board/play/list/1" method="get" onsubmit="Board_Search(this); return false;">
-                                        <input type="hidden" id="category" name="category" value="<%= queryCategory %>">
-                                        <input type="text" id="search" name="search" value="" placeholder="제목 기준">
-                                        <input type="submit" class="btn btn-default" value="검색">
+                                   <form class="board-search form-inline" name="board-search" action="/board/play/list/1" method="get" onsubmit="Board_Search(this); return false;">
+                                        <div class="form-group has-feedback">
+                                             <input type="text" id="search" name="search" value="" class="form-control" aria-describedby="inputSearchStatus" placeholder="제목 기준">
+                                             <span class="glyphicon glyphicon-search form-control-feedback" aria-hidden="true"></span>
+                                             <span id="inputSearchStatus" class="sr-only">(검색)</span>
+                                             <input type="hidden" id="category" name="category" value="<%= queryCategory %>">
+                                             <input type="submit" class="btn btn-default" value="검색">
+                                        </div>
                                    </form>
                               </div>
                               <div class="play-pagination">
