[JS, HTML, CSS] Youtube iFrame이 반응형 디자인에 따라 사이즈가 조절되도록 수정

--- a/public_html/views/_view.ejs
+++ b/public_html/views/_view.ejs
@@ -135,7 +135,9 @@ Number.prototype.zf = function (len) { return this.toString().zf(len); };
                               <div class="form-group">
                                    <label class="col-sm-2 control-label">영상</label>
                                    <div class="col-sm-10">
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= boardData[0].a_youtubeid %>" frameborder="0" allowfullscreen></iframe>
+                                        <div class="playvideo">
+                                             <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= boardData[0].a_youtubeid %>" frameborder="0" allowfullscreen></iframe>
+                                        </div>
                                    </div>
                               </div>
 <% } %>
