--- a/public_html/public/css/custom.css
+++ b/public_html/public/css/custom.css
@@ -87,6 +87,28 @@ table > thead > tr > th {
 
 /*****************************************************
  *
+ * [Youtube Responsive]
+ *
+******************************************************/
+.playvideo {
+     position: relative;
+     padding-bottom: 56.25%;
+     padding-top: 30px;
+     height: 0;
+     overflow: hidden;
+}
+.playvideo iframe,
+.playvideo object,
+.playvideo embed {
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+}
+
+/*****************************************************
+ *
  * [Navi]
  *
 ******************************************************/
