--- a/public_html/public/css/custom.css
+++ b/public_html/public/css/custom.css
@@ -446,6 +446,7 @@ table > thead > tr > th {
 }
 .play-popular > .popular-list {
      margin: 20px 20px 10px 20px;
+     display: none;
 }
 .play-popular .play-popular-article {
      position: relative;
